Fixed spacing in item-last-pm-modified

--- a/src/plonemeeting/portal/core/browser/static/less/global.less
+++ b/src/plonemeeting/portal/core/browser/static/less/global.less
@@ -307,15 +307,11 @@ div.decision table {
 
 .item-last-pm-modified {
     text-align: center;
-}
-
-.item-infos .item-last-pm-modified {
-    text-align: left;
-}
-
-.item-metadata .item-last-pm-modified {
-    width: 100%;
-    text-align: left;
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    font-weight: 300;
+    margin-top: 1.25em;
 }
 
 .item-container .project-disclaimer {
